[tool.poetry]
name = "nba-machinelearning"
version = "0.1.0"
description = ""
authors = ["Kieran"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.0"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
